--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,4 @@
 <resources>
     <string name="app_name">My app</string>
-    <string name="logo_text">Калькулятор</string>
-    <string name="hint_1">Введите первое число</string>
-    <string name="hint_2">Введите второе число</string>
+    <string name="logo">Просто текст</string>
 </resources>
